Fixed the bug with the blog-roll. Now each stack correctly.

--- a/index.html
+++ b/index.html
@@ -127,27 +127,30 @@
         <div class="row">
           <div class="row">
             <div class="small-4 medium-4 large-4 columns">
-              <div class="panel">
+              <div class="panel text-center">
                 <img src="http://placehold.it/300x150" alt="">
                 <h3>Product Name</h3>
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore culpa reiciendis voluptatum consequuntur fugiat deleniti quaerat distinctio et nesciunt repudiandae.</p>
+                <a class="button small">Buy Me</a>
               </div>
             </div>
             <div class="small-4 medium-4 large-4 columns">
-              <div class="panel">
+              <div class="panel text-center">
                 <img src="http://placehold.it/300x150" alt="">
                 <h3>Product Name</h3>
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore culpa reiciendis voluptatum consequuntur fugiat deleniti quaerat distinctio et nesciunt repudiandae.</p>
+                <a class="button small">Buy Me</a>
               </div>
             </div>
             <div class="small-4 medium-4 large-4 columns">
-              <div class="panel">
+              <div class="panel text-center">
                 <img src="http://placehold.it/300x150" alt="">
                 <h3>Product Name</h3>
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore culpa reiciendis voluptatum consequuntur fugiat deleniti quaerat distinctio et nesciunt repudiandae.</p>
+                <a class="button small">Buy Me</a>
               </div>
             </div>
           </div>
@@ -173,6 +176,7 @@
           </div>
           <div class="small-4 medium-4 large-4 columns">
             <h3>Video Testiomonials</h3>
+            <hr>
             <div class="video-frame">
               <div><img src="http://placehold.it/275x150" alt=""></div>
               <div><img src="http://placehold.it/275x150" alt=""></div>
@@ -180,36 +184,43 @@
           </div>
           <div class="small-4 medium-4 large-4 columns">
             <h3>Interested?</h3>
-            <a href="#" class="button">Visit Our Careers Site</a>
+            <hr>
+            <a href="#" class="button small">Visit Our Careers Site</a>
           </div>
         </div>
       </section>
       <!-- End Of Employee Testimonials -->
       <section class="even"><!-- Modules from Main Site -->
       <!-- Blog Section -->
-      <div class="row">
-        <div class="small-4 medium-4 large-4 columns">
-          <h4>Blog</h4>
-          <div class="panel blog-roll">
-            <ul class="no-bullet">
-              <li>
-                <img class="th" src="http://placehold.it/75x75" alt="">
-                <a href="">Title of post</a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sit.</p>
-                <a href="">Learn more</a>
-              </li>
-              <hr>
-              <li><img class="th" src="http://placehold.it/75x75" alt="">
-                <a href="">Title of post</a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sit.</p>
-                <a href="">Learn more</a>
-              </li>
-              <hr>
-              <li><img class="th" src="http://placehold.it/75x75" alt="">
-                <a href="">Title of post</a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sit.</p>
-                <a href="">Learn more</a>
-              </li>
+<div class="row">
+  <div class="small-4 medium-4 large-4 columns">
+    <h4>Blog</h4>
+    <div class="panel blog-roll">
+      <ul class="no-bullet">
+        <li>
+          <img src="http://placehold.it/75x75" alt="">
+          <a href="">Title of post</a>
+          <div class="meta-desc">
+            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sit.</span>
+            <a href="">Learn more</a>
+          </div>
+        </li>
+        <li>
+          <img src="http://placehold.it/75x75" alt="">
+          <a href="">Title of post</a>
+          <div class="meta-desc">
+            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sit.</span>
+            <a href="">Learn more</a>
+          </div>
+        </li>
+        <li>
+          <img src="http://placehold.it/75x75" alt="">
+          <a href="">Title of post</a>
+          <div class="meta-desc">
+            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sit.</span>
+            <a href="">Learn more</a>
+          </div>
+        </li>
             </ul>
           </div>
         </div>
@@ -276,15 +287,39 @@
         <div class="row">
           <div class="small-3 medium-3 large-3 columns">
             <h4>Title</h4>
+            <ul class="disc">
+              <li>Lorem ipsum dolor sit amet.</li>
+              <li>Lorem ipsum dolor sit amet.</li>
+              <li>Lorem ipsum dolor sit amet.</li>
+              <li>Lorem ipsum dolor sit amet.</li>
+            </ul>
           </div>
           <div class="small-3 medium-3 large-3 columns">
             <h4>Title</h4>
+             <ul class="disc">
+              <li>Lorem ipsum dolor sit amet.</li>
+              <li>Lorem ipsum dolor sit amet.</li>
+              <li>Lorem ipsum dolor sit amet.</li>
+              <li>Lorem ipsum dolor sit amet.</li>
+            </ul>
           </div>
           <div class="small-3 medium-3 large-3 columns">
             <h4>Title</h4>
+             <ul class="disc">
+              <li>Lorem ipsum dolor sit amet.</li>
+              <li>Lorem ipsum dolor sit amet.</li>
+              <li>Lorem ipsum dolor sit amet.</li>
+              <li>Lorem ipsum dolor sit amet.</li>
+            </ul>
           </div>
           <div class="small-3 medium-3 large-3 columns">
             <h4>Title</h4>
+             <ul class="disc">
+              <li>Lorem ipsum dolor sit amet.</li>
+              <li>Lorem ipsum dolor sit amet.</li>
+              <li>Lorem ipsum dolor sit amet.</li>
+              <li>Lorem ipsum dolor sit amet.</li>
+            </ul>
           </div>
         </div>
       </footer>
