Added sub-footer; Changed all sections to be full-width on mobile; Added Select input on form; Added inline-list for the blog postings.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <section class="even">
         <div class="row">
           <div class="row">
-            <div class="small-4 medium-4 large-4 columns">
+            <div class="small-12 medium-4 large-4 columns">
               <div class="panel text-center">
                 <img src="http://placehold.it/300x150" alt="">
                 <h3>Product Name</h3>
@@ -135,7 +135,7 @@
                 <a class="button small">Buy Me</a>
               </div>
             </div>
-            <div class="small-4 medium-4 large-4 columns">
+            <div class="small-12 medium-4 large-4 columns">
               <div class="panel text-center">
                 <img src="http://placehold.it/300x150" alt="">
                 <h3>Product Name</h3>
@@ -144,7 +144,7 @@
                 <a class="button small">Buy Me</a>
               </div>
             </div>
-            <div class="small-4 medium-4 large-4 columns">
+            <div class="small-12 medium-4 large-4 columns">
               <div class="panel text-center">
                 <img src="http://placehold.it/300x150" alt="">
                 <h3>Product Name</h3>
@@ -160,7 +160,7 @@
       <!-- Employee Testimonials -->
       <section class="odd">
         <div class="row">
-          <div class="small-4 medium-4 large-4 columns text-center">
+          <div class="small-12 medium-4 large-4 columns text-center">
             <h3>What our reps are saying?</h3>
             <hr>
             <div class="testi-frame">
@@ -174,7 +174,7 @@
               </div>
             </div>
           </div>
-          <div class="small-4 medium-4 large-4 columns">
+          <div class="small-12 medium-4 large-4 columns">
             <h3>Video Testiomonials</h3>
             <hr>
             <div class="video-frame">
@@ -182,7 +182,7 @@
               <div><img src="http://placehold.it/275x150" alt=""></div>
             </div>
           </div>
-          <div class="small-4 medium-4 large-4 columns">
+          <div class="small-12 medium-4 large-4 columns">
             <h3>Interested?</h3>
             <hr>
             <a href="#" class="button small">Visit Our Careers Site</a>
@@ -192,41 +192,39 @@
       <!-- End Of Employee Testimonials -->
       <section class="even"><!-- Modules from Main Site -->
       <!-- Blog Section -->
-<div class="row">
-  <div class="small-4 medium-4 large-4 columns">
-    <h4>Blog</h4>
-    <div class="panel blog-roll">
-      <ul class="no-bullet">
-        <li>
-          <img src="http://placehold.it/75x75" alt="">
-          <a href="">Title of post</a>
-          <div class="meta-desc">
-            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sit.</span>
-            <a href="">Learn more</a>
-          </div>
-        </li>
-        <li>
-          <img src="http://placehold.it/75x75" alt="">
-          <a href="">Title of post</a>
-          <div class="meta-desc">
-            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sit.</span>
-            <a href="">Learn more</a>
-          </div>
-        </li>
-        <li>
-          <img src="http://placehold.it/75x75" alt="">
-          <a href="">Title of post</a>
-          <div class="meta-desc">
-            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sit.</span>
-            <a href="">Learn more</a>
-          </div>
-        </li>
+      <div class="row">
+        <div class="small-12 medium-4 large-4 columns">
+          <h4>Blog</h4>
+          <div class="panel blog-roll">
+            <ul class="no-bullet">
+              <li>
+                <img class="th" src="http://placehold.it/75x75" alt="">
+                <a href="">Title of post</a>
+                <div class="meta">
+                  <span class="meta-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sit.</span>
+                  <a href="">Learn more</a>
+                </div>
+                <ul class="meta-social">
+                  <li><a href="">lorem</a></li>
+                  <li>lorem</li>
+                  <li>lorem</li>
+                </ul>
+              </li>
+              <hr>
+              <li>
+                <img class="th" src="http://placehold.it/75x75" alt="">
+                <a href="">Title of post</a>
+                <div class="meta">
+                  <span class="meta-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sit.</span>
+                  <a href="">Learn more</a>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
         <!-- End of Blog Section -->
         <!-- News Section -->
-        <div class="small-4 medium-4 large-4 columns">
+        <div class="small-12 medium-4 large-4 columns">
           <h3>News</h3>
           <div class="panel news-roll">
             <ul>
@@ -259,12 +257,24 @@
             <div class="row">
               <div class="large-6 columns">
                 <label>Input Label
-                  <input type="text" placeholder="large-4.columns" />
+                  <input type="text" placeholder="large-6.columns" />
                 </label>
               </div>
               <div class="large-6 columns">
                 <label>Input Label
-                  <input type="text" placeholder="large-4.columns" />
+                  <input type="text" placeholder="large-6.columns" />
+                </label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="large-12 columns">
+                <label>
+                  Dropdown Box
+                  <select>
+                    <option value="Question 1">Question 1</option>
+                    <option value="Question 2">Question 2</option>
+                    <option value="Question 3">Question 3</option>
+                  </select>
                 </label>
               </div>
             </div>
@@ -287,7 +297,7 @@
         <div class="row">
           <div class="small-3 medium-3 large-3 columns">
             <h4>Title</h4>
-            <ul class="disc">
+            <ul class="no-bullet">
               <li>Lorem ipsum dolor sit amet.</li>
               <li>Lorem ipsum dolor sit amet.</li>
               <li>Lorem ipsum dolor sit amet.</li>
@@ -296,7 +306,7 @@
           </div>
           <div class="small-3 medium-3 large-3 columns">
             <h4>Title</h4>
-             <ul class="disc">
+            <ul class="no-bullet n">
               <li>Lorem ipsum dolor sit amet.</li>
               <li>Lorem ipsum dolor sit amet.</li>
               <li>Lorem ipsum dolor sit amet.</li>
@@ -305,7 +315,7 @@
           </div>
           <div class="small-3 medium-3 large-3 columns">
             <h4>Title</h4>
-             <ul class="disc">
+            <ul class="no-bullet">
               <li>Lorem ipsum dolor sit amet.</li>
               <li>Lorem ipsum dolor sit amet.</li>
               <li>Lorem ipsum dolor sit amet.</li>
@@ -314,7 +324,7 @@
           </div>
           <div class="small-3 medium-3 large-3 columns">
             <h4>Title</h4>
-             <ul class="disc">
+            <ul class="no-bullet">
               <li>Lorem ipsum dolor sit amet.</li>
               <li>Lorem ipsum dolor sit amet.</li>
               <li>Lorem ipsum dolor sit amet.</li>
@@ -325,6 +335,18 @@
       </footer>
     </section>
     <!-- End of Footer -->
+    <!-- Sub-Footer -->
+    <footer class="sub-footer">
+    <div class="row">
+      <div class="small-6 medium-6 large-6 columns">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, labore, illo iusto minima veniam quidem libero quas nostrum ipsa sapiente!</p>
+      </div>
+      <div class="small-6 medium-6 large-6 columns">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores earum temporibus laborum perferendis officia et aliquam qui fuga cum.</p>
+      </div>
+    </div>
+    </footer>
+    <!-- End of Sub-Footer -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <script src="bower_components/slick-carousel/slick/slick.min.js"></script>
