Added the correct fields for the contact form. Changed sub-footer to three columns

--- a/index.html
+++ b/index.html
@@ -249,39 +249,40 @@
           <form>
             <div class="row">
               <div class="large-12 columns">
-                <label>Input Label
-                  <input type="text" placeholder="large-12.columns" />
+                <label>Name
+                  <input type="text" placeholder="Please Enter Your Name" />
                 </label>
               </div>
             </div>
             <div class="row">
               <div class="large-6 columns">
-                <label>Input Label
-                  <input type="text" placeholder="large-6.columns" />
+                <label>Phone Number
+                  <input type="text" placeholder="Phone Number" />
                 </label>
               </div>
               <div class="large-6 columns">
-                <label>Input Label
-                  <input type="text" placeholder="large-6.columns" />
+                <label>Email
+                  <input type="text" placeholder="Email" />
                 </label>
               </div>
             </div>
             <div class="row">
               <div class="large-12 columns">
                 <label>
-                  Dropdown Box
+                  Please Select The Option That Applies
                   <select>
-                    <option value="Question 1">Question 1</option>
-                    <option value="Question 2">Question 2</option>
-                    <option value="Question 3">Question 3</option>
+                    <option value="Question 1">Please Select</option>
+                    <option value="Are You A Current Customer">Are You A Current Customer</option>
+                    <option value="Question 3">Are You A New Customer</option>
+                    <option value="Question 4">Do You Have A Service Problem</option>
                   </select>
                 </label>
               </div>
             </div>
             <div class="row">
               <div class="large-12 columns">
-                <label>Textarea Label
-                  <textarea placeholder="small-12.columns"></textarea>
+                <label>Enter Your Message
+                  <textarea placeholder="Message"></textarea>
                 </label>
               </div>
             </div>
@@ -294,44 +295,32 @@
     <!-- Footer -->
     <section>
       <footer>
-        <div class="row">
-          <div class="small-3 medium-3 large-3 columns">
-            <h4>Title</h4>
-            <ul class="no-bullet">
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-            </ul>
-          </div>
-          <div class="small-3 medium-3 large-3 columns">
-            <h4>Title</h4>
-            <ul class="no-bullet n">
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-            </ul>
-          </div>
-          <div class="small-3 medium-3 large-3 columns">
-            <h4>Title</h4>
-            <ul class="no-bullet">
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-            </ul>
-          </div>
-          <div class="small-3 medium-3 large-3 columns">
-            <h4>Title</h4>
-            <ul class="no-bullet">
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-            </ul>
-          </div>
+      <div class="row">
+        <div class="small-4 medium-4 large-4 columns">
+        <h4>Title</h4>
+          <ul class="no-bullet">
+            <li>Lorem</li>
+            <li>Lorem</li>
+            <li>Lorem</li>
+          </ul>
         </div>
+        <div class="small-4 medium-4 large-4 columns">
+          <h4>Title</h4>
+          <ul class="no-bullet">
+            <li>Lorem</li>
+            <li>Lorem</li>
+            <li>Lorem</li>
+          </ul>
+        </div>
+        <div class="small-4 medium-4 large-4 columns">
+          <h4>Title</h4>
+          <ul class="no-bullet">
+            <li>Lorem</li>
+            <li>Lorem</li>
+            <li>Lorem</li>
+          </ul>
+        </div>
+      </div>
       </footer>
     </section>
     <!-- End of Footer -->
