--- a/index.html
+++ b/index.html
@@ -122,6 +122,24 @@
         </div>
       </section>
       <!-- End of Office Identification -->
+<!-- Box-rollover feature -->
+<section class="odd">
+  <div class="row">
+  <div class="small-4 medium-4 large-4 columns">
+    <img src="http://placehold.it/200x200" alt="">
+    <div class="overlay">
+    </div>
+  </div>
+  <div class="small-4 medium-4 large-4 columns">
+    <img src="http://placehold.it/200x200" alt="">
+  </div>
+  <div class="small-4 medium-4 large-4 columns">
+    <img src="http://placehold.it/200x200" alt="">
+  </div>
+</div>
+</section>
+
+<!-- End of box-rollover -->
       <!-- Featured Product -->
       <section class="even">
         <div class="row">
