--- a/index.html
+++ b/index.html
@@ -126,9 +126,13 @@
 <section class="odd">
   <div class="row">
   <div class="small-4 medium-4 large-4 columns">
+<div class="box-item">
+  <div class="box-image">
     <img src="http://placehold.it/200x200" alt="">
-    <div class="overlay">
-    </div>
+  </div>
+  <div class="overlay"></div>
+</div>
+
   </div>
   <div class="small-4 medium-4 large-4 columns">
     <img src="http://placehold.it/200x200" alt="">
