--- a/index.html
+++ b/index.html
@@ -127,30 +127,33 @@
         <div class="row">
           <div class="row">
             <div class="small-12 medium-4 large-4 columns">
-              <div class="panel text-center">
+              <div class="product-panel text-center clearfix">
                 <img src="http://placehold.it/300x150" alt="">
                 <h3>Product Name</h3>
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore culpa reiciendis voluptatum consequuntur fugiat deleniti quaerat distinctio et nesciunt repudiandae.</p>
-                <a class="button small">Buy Me</a>
+                <a class="left button small">Learn More</a>
+                <a class="right button small">Buy Me</a>
               </div>
             </div>
             <div class="small-12 medium-4 large-4 columns">
-              <div class="panel text-center">
+              <div class="product-panel text-center clearfix">
                 <img src="http://placehold.it/300x150" alt="">
                 <h3>Product Name</h3>
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore culpa reiciendis voluptatum consequuntur fugiat deleniti quaerat distinctio et nesciunt repudiandae.</p>
-                <a class="button small">Buy Me</a>
+                <a class="left button small">Learn More</a>
+                <a class="right button small">Buy Me</a>
               </div>
             </div>
             <div class="small-12 medium-4 large-4 columns">
-              <div class="panel text-center">
+              <div class="product-panel text-center clearfix">
                 <img src="http://placehold.it/300x150" alt="">
                 <h3>Product Name</h3>
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore culpa reiciendis voluptatum consequuntur fugiat deleniti quaerat distinctio et nesciunt repudiandae.</p>
-                <a class="button small">Buy Me</a>
+                <a class="left button small">Learn More</a>
+                <a class="right button small">Buy Me</a>
               </div>
             </div>
           </div>
@@ -160,7 +163,7 @@
       <!-- Employee Testimonials -->
       <section class="odd">
         <div class="row">
-          <div class="small-12 medium-4 large-4 columns text-center">
+          <div class="small-12 medium-5 large-5 columns text-center">
             <h3>What our reps are saying?</h3>
             <hr>
             <div class="testi-frame">
@@ -174,7 +177,7 @@
               </div>
             </div>
           </div>
-          <div class="small-12 medium-4 large-4 columns">
+          <div class="small-12 medium-5 large-5 columns">
             <h3>Video Testiomonials</h3>
             <hr>
             <div class="video-frame">
@@ -182,7 +185,7 @@
               <div><img src="http://placehold.it/275x150" alt=""></div>
             </div>
           </div>
-          <div class="small-12 medium-4 large-4 columns">
+          <div class="small-12 medium-2 large-2 columns">
             <h3>Interested?</h3>
             <hr>
             <a href="#" class="button small">Visit Our Careers Site</a>
