Added some small stuff to the blog component

--- a/index.html
+++ b/index.html
@@ -203,9 +203,12 @@
               <li>
                 <img class="th" src="http://placehold.it/75x75" alt="">
                 <a href="">Title of post</a>
+                <ul class="inline-list meta-data">
+                  <li>January 1, 1000 2 Comments</li>
+                </ul>
                 <div class="meta">
                   <span class="meta-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sit.</span>
-                  <a href="">Learn more</a>
+                  <a class="button tiny" href="">Learn more</a>
                 </div>
                 <ul class="meta-social">
                   <li><a href="">lorem</a></li>
