--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
       <!-- End of Navigation -->
       <!-- Image of the location Skyline -->
       <section class="office">
-        <div class="row full-width">
-
-        </div>
+  <div class="row">
+    <div class="small-12 medium-6 large-8 columns">
+      <div class="home-panel animate" data-animate="fadeInLeftBig">
+        <p>Eliot Management Group has been providing merchant services to businesses for over 15 years.  Eliot provides services to thousands of customers, processing billions of dollars in transactions annually.  Eliot believes in a consultative approach and maintains personalized, one on one relationships with all its merchants, providing them with on-demand support and 24/7 customer service.  To provide this level of support, Eliot maintains a network of local offices in cities across the nation.  More than a voice on the phone, Eliot representatives supply personalized assistance and on-going customer service.</p>
+      </div>
+    </div>
+  </div>
       </section>
       <!-- End of location Skyline -->
       <!-- Office Identification -->
@@ -115,8 +119,10 @@
             <img class="th" src="http://placehold.it/600x325" alt="">
             <hr>
             <ul class="inline-list">
-              <li><i class="icon-shop"></i>123 Main Street<span class="state"> <i class="icon-map"></i> State, 12345</span></li>
-              <li><i class="icon-location"></i>Hours of Operation: 8:00AM - 5:00PM</li>
+              <li></li>
+              <li><i class="icon-shop"></i>123 Main Street</li>
+              <li>City</li>
+              <li>State</li>
             </ul>
           </div>
         </div>
@@ -186,7 +192,7 @@
             <hr>
             <div class="testi-frame">
               <div class="testi-card">
-                <img class="text-center" src="http://placehold.it/100x100" alt="">
+                <img class="circle" class="text-center" src="http://placehold.it/100x100" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               </div>
               <div class="testi-card">
@@ -204,7 +210,7 @@
       <section class="odd"><!-- Modules from Main Site -->
       <!-- Blog Section -->
       <div class="row">
-        <div class="small-12 medium-4 large-4 columns">
+        <div class="small-12 medium-6 large-6 columns">
           <h3>Blog</h3>
           <div class="panel blog-roll">
             <ul class="no-bullet">
@@ -216,6 +222,7 @@
                 </ul>
                 <div class="meta">
                   <span class="meta-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sit.</span>
+                  <br>
                   <a class="button tiny" href="">Learn more</a>
                 </div>
               </li>
@@ -225,7 +232,8 @@
                 <a href="">Title of post</a>
                 <div class="meta">
                   <span class="meta-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sit.</span>
-                  <a href="">Learn more</a>
+                 <br>
+                  <a class="button tiny" href="">Learn more</a>
                 </div>
               </li>
             </ul>
@@ -233,7 +241,7 @@
         </div>
         <!-- End of Blog Section -->
         <!-- News Section -->
-        <div class="small-12 medium-4 large-4 columns">
+        <div class="small-12 medium-6 large-6 columns">
           <h3>News</h3>
           <div class="panel news-roll">
             <ul>
@@ -252,8 +260,13 @@
           </div>
         </div>
         <!-- End of News Section -->
-        <!-- Contact Section -->
-        <div class="small-12 medium-4 large-4 columns">
+      </div>
+    </section>
+    <!-- End of Modules from Main Site -->
+<!-- Contact Section -->
+<section class="even">
+<div class="row">
+        <div class="small-12 medium-12 large-12 columns">
           <h3>Contact</h3>
           <form>
             <div class="row">
@@ -297,10 +310,9 @@
             </div>
           </form>
         </div>
-        <!-- End of Contact Section -->
-      </div>
-    </section>
-    <!-- End of Modules from Main Site -->
+</div>
+</section>
+<!-- End of Contact Section -->
     <!-- Footer -->
     <section>
       <footer>
