Added photos for pages.

--- a/office.html
+++ b/office.html
@@ -24,7 +24,7 @@
           <section class="top-bar-section">
             <!-- Right Nav Section -->
             <ul class="right">
-              <li class="active has-dropdown"><a href="#">Look at your account</a>
+              <li class="active has-dropdown"><a href="#">Look at your Account</a>
               <ul class="dropdown">
                 <li><a href="#"><?xml version="1.0" encoding="utf-8"?>
                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -58,18 +58,24 @@
     </div>
     <!-- End of Navigation -->
 <!-- Content -->
+<div class="row">
+  <div class="small-12 medium-12 large-12 columns">
+    <h1>Lorem ipsum dolor sit amet.</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam maxime aliquid officiis quas veniam repudiandae, similique possimus eum odit id.</p>
+  </div>
+</div>
 <div class="grid">
   <figure class="slide">
-    <img src="img/skyline-test.jpg" alt="">
+    <img src="img/office/austin.jpg" alt="">
     <figcaption>
-      <h2>Dallas</h2>
+      <h2>Austin</h2>
       <p>5050 Quorum Drive St. 410</p>
       <p>469-374-9300</p>
   <p class="button small">Visit Office Page</p>
     </figcaption>
   </figure>
 <figure class="slide">
-    <img src="http://placehold.it/475x400" alt="">
+    <img src="img/office/boise.jpg" alt="">
     <figcaption>
       <h2>Office Name</h2>
       <p>Office Address</p>
@@ -78,7 +84,7 @@
     </figcaption>
   </figure>
   <figure class="slide">
-    <img src="http://placehold.it/475x400" alt="">
+    <img src="img/office/charlotte.jpg" alt="">
     <figcaption>
       <h2>Office Name</h2>
       <p>Office Address</p>
@@ -87,7 +93,7 @@
     </figcaption>
   </figure>
   <figure class="slide">
-    <img src="http://placehold.it/475x400" alt="">
+    <img src="img/office/chicago.jpg" alt="">
     <figcaption>
       <h2>Office Name</h2>
       <p>Office Address</p>
